# AnipayDjangoWalletAPP

AniPay/: .gitignore  Dockerfile  docker-compose.yaml  main.py  manage.py  pyproject.toml
AniPay/.github/workflows/: ci.yml
AniPay/AniPay/: asgi.py  settings.py  urls.py  wsgi.py
AniPay/notification/: models.py  services.py
AniPay/notification/migrations/: 0001_initial.py  0002_alter_notification_reference.py  0002_initial.py
AniPay/services/: onboarding_service.py
AniPay/user/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
AniPay/user/migrations/: 0001_initial.py
AniPay/wallet/: admin.py  models.py  serializers.py  services.py  urls.py  util.py  views.py
AniPay/wallet/migrations/: 0001_initial.py  0002_alter_ledger_balance_after.py
AniPay/wallet/services/: dashboard_service.py  register_wallet.py  wallet_transfer.py
